--- a/index.html
+++ b/index.html
@@ -57,7 +57,23 @@
 
     <!-- Hero -->
 
-    
+    <section class="hero">
+
+        <div class="container d-grid hero-container">
+
+            <h2 class="hero-tagline">
+                Earn Interest on your Crypto with <span>Stacfi</span>
+            </h2>
+
+            <p class="hero-text">
+                By staking on stacfi, you can put your cryptocurrency to work and earn interest
+            </p>
+
+            <a href="#" class="button hero-button">Open an account now</a>
+
+        </div>
+
+    </section>
 
 
     <script src="script.js"></script>
