Finished qualities section

--- a/index.html
+++ b/index.html
@@ -75,6 +75,48 @@
 
     </section>
 
+    <!-- Qualities -->
+
+    <section class="qualities">
+
+        <div class="container qualities-container d-grid">
+
+            <div class="quality-1 d-grid">
+
+                <div class="quality-icon">
+                    <img src="./asset/svg/question mark.svg" alt="">
+                </div>
+
+                <h2 class="quality-title">Why Choose Stacfi?</h2>
+
+                <p class="quality-text">
+                    We’re building an inclusive financial system that makes Bitcoin and other cryptocurrencies a universal option for billions of people worldwide. Bitcoin and alt coins are resources for human development and progress, and Stacfi is the gateway.
+                </p>
+
+                <a href="#" class="button">Learn more here</a>
+
+            </div>
+
+            <div class="quality-2 d-grid">
+
+                <div class="quality-icon">
+                    <img src="./asset/svg/percent earn.svg" alt="">
+                </div>
+
+                <h2 class="quality-title">Earn up to 13% weekly</h2>
+
+                <p class="quality-text">
+                    Earn up to 13% weekly rewards when you stake on 10+ digital assets. Simply and safely deposit funds with crypto and select your staking plan to automatically earn rewards at the end of each week with no lockups.
+                </p>
+
+                <a href="#" class="button">Learn more here</a>
+
+            </div>
+
+        </div>
+
+    </section>
+
 
     <script src="script.js"></script>
 </body>
