Finished get started section

--- a/index.html
+++ b/index.html
@@ -117,6 +117,55 @@
 
     </section>
 
+    <section class="get-started">
+
+        <div class="container">
+
+            <h2 class="get-started-title">Get started in 5 minutes</h2>
+
+            <div class="get-started-text-content">
+
+                <div class="numbers">
+                    <p>01</p>
+
+                    <div class="line">
+                        <img src="./asset/svg/Line 1.svg" alt="">
+                    </div>
+
+                    <p>02</p>
+
+                    <div class="line">
+                        <img src="./asset/svg/Line 1.svg" alt="">
+                    </div>
+
+                    <p>03</p>
+
+                </div>
+
+                <div class="text-group">
+
+                    <div class="text">
+                        <h3>Open an account</h3>
+                        <p>Create your free stacfi account</p>
+                    </div>
+
+                    <div class="text">
+                        <h3>Fund your account</h3>
+                        <p>Transfer Crypto or cash to fund instantly while we work relentlessly to bring ACH deposit to you.</p>
+                    </div>
+
+                    <div class="text">
+                        <h3>Stake</h3>
+                        <p>Stake and start earning</p>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+
 
     <script src="script.js"></script>
 </body>
