--- a/login.html
+++ b/login.html
@@ -35,11 +35,10 @@
                     <input type="password" name="password" placeholder="Enter Password" required>
                 </div>
 
-                <label for="checkbox" class="checkboxId">
+                <label for="checkbox" class="checkboxId">checkbox</label>
                     <input type="checkbox" name="checkboxName" id="checkboxId" class="checkbox-input">
-                    <div class="checkbox-box"></div>
+                    <!-- <div class="checkbox-box"></div> -->
                     <p> Keep me logged in</p>
-                </label>
 
                 <div class="btns">
                     <button class="button">Sign up</button>
