--- a/support.html
+++ b/support.html
@@ -66,11 +66,11 @@
                 Experiencing an issue? <br> Talk to support
             </h2>
 
-            <div class="details">
+            <form class="details">
 
                 <div class="username">
                     <p>Username</p>
-                    <input type="username" name="username" placeholder="e.g User69" required>
+                    <input type="text" name="username" placeholder="e.g User69" required>
                 </div>
 
                 <div class="email">
@@ -80,15 +80,15 @@
 
                 <div class="message">
                     <p>Drop a message</p>
-                    <textarea class="textarea" placeholder="Type here"></textarea>
+                    <textarea class="textarea" placeholder="Type here" required></textarea>
                 </div>
 
-            </div>
+                    <div class="btns">
+                        <button type="submit" class="button submit-button">Submit</button>
+                        <a href="./home.html" class="go-home">Go back Home</a>
+                    </div>
 
-            <div class="btns">
-                <button class="button submit-button" onclick="openPopup()">Submit</button>
-                <a href="./home.html" class="go-home">Go back Home</a>
-            </div>
+            </form>
 
             <div class="popup">
                 <div class="popup-content d-grid">
