more updates on desktop view

--- a/about.html
+++ b/about.html
@@ -88,7 +88,8 @@
         <div class="container who-are-we-container d-grid">
 
             <div class="who-are-we-image">
-                <img src="./asset/png/image 2.png" alt="">
+                <img class="small-screen" src="./asset/png/image 2.png" alt="">
+                <img class="big-screen" src="./asset/png/image desktop.png" alt="">
             </div>
 
             <div class="who-are-we-content">
