more updates on desktop view

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                 <ul class="list">
     
                     <li class="list-item">
-                        <a href="home.html" class="list-link current-link">Home</a>
+                        <a href="home.html" class="list-link">Home</a>
                     </li>
                     <li class="list-item small-screen">
                         <a href="signup.html" class="list-link">Register</a>
@@ -40,7 +40,7 @@
                         <a href="login.html" class="list-link">Log in</a>
                     </li>
                     <li class="list-item">
-                        <a href="about.html" class="list-link">About</a>
+                        <a href="about.html" class="list-link current-link">About</a>
                     </li>
                     <li class="list-item">
                         <a href="support.html" class="list-link">Support</a>
