--- a/support.html
+++ b/support.html
@@ -32,7 +32,7 @@
                 <ul class="list">
     
                     <li class="list-item">
-                        <a href="home.html" class="list-link current-link">Home</a>
+                        <a href="home.html" class="list-link">Home</a>
                     </li>
                     <li class="list-item small-screen">
                         <a href="signup.html" class="list-link">Register</a>
@@ -44,7 +44,7 @@
                         <a href="about.html" class="list-link">About</a>
                     </li>
                     <li class="list-item">
-                        <a href="support.html" class="list-link">Support</a>
+                        <a href="support.html" class="list-link current-link">Support</a>
                     </li>
     
                     <li class="list-item big-screen">
