feat: "dasboard ui"

--- a/login.html
+++ b/login.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="variables.css">
+    <link rel="stylesheet" href="header.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -18,7 +20,7 @@
     
         <nav class="navbar container">
             <a href="home.html" class="logo">
-                <img src="./asset/png/logo-small.png" alt="Stafi logo" class="logo-image">
+                <img src="./asset/svg/stacfi-logo.svg" alt="Stafi logo" class="logo-image">
             </a>
     
             <button class="menu-toggler">
@@ -97,7 +99,7 @@
                 </div>
 
                 <div class="btns">
-                    <button class="button">Sign up</button>
+                    <button class="button">Log in</button>
                    <span> Don’t have an account? <a href="signup.html" class="go-to-login">Sign up</a> </span>
                     <a href="./home.html" class="go-home small-screen">Go back Home</a>
                 </div>
