--- a/deposit.html
+++ b/deposit.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Deposit</title>
 </head>
 
 <body>
@@ -132,6 +132,10 @@
                     <span class="num">03</span>
                     <span class="textStep">Upload payment confirmation screenshot then click <span class="confirm">“Confirm Deposit”</span></span>
 
+                </div>
+
+                <div class="barcode-con">
+                    <img src="asset/png/barcode.png" alt="">
                 </div>
 
                 <div class="botCon">
