--- a/dashboard.html
+++ b/dashboard.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>User Dashboard</title>
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="variables.css">
@@ -13,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 
 <body>
@@ -225,28 +228,28 @@
 
                         <div class="top">
                             <!-- <div> -->
-                                <div class="top-left">
-                                    <div class="small_coinLogoCon">
-                                        <img src="/asset/png/ethereum-logo.png" alt="ethereum-logo">
-                                    </div>
-                                    <div class="coinDetailsCon">
-                                        <p class="coinShort">LUCK</p>
-                                        <p class="coinLong">Lucky Bluck</p>
-                                    </div>
+                            <div class="top-left">
+                                <div class="small_coinLogoCon">
+                                    <img src="/asset/png/ethereum-logo.png" alt="ethereum-logo">
                                 </div>
-                                <div class="top-center" style="text-align: center;">
-                                    <span class="material-icons">
-                                        arrow_right_alt
-                                    </span>
+                                <div class="coinDetailsCon">
+                                    <p class="coinShort">LUCK</p>
+                                    <p class="coinLong">Lucky Bluck</p>
                                 </div>
-                                <div class="top-right">
-                                    <div class="small_coinLogoCon">
-                                        <img src="/asset/png/ethereum-logo.png" alt="ethereum-logo">
-                                    </div>
-                                    <div>
-                                        <p class="coin">LUCK</p>
-                                    </div>
+                            </div>
+                            <div class="top-center" style="text-align: center;">
+                                <span class="material-icons">
+                                    arrow_right_alt
+                                </span>
+                            </div>
+                            <div class="top-right">
+                                <div class="small_coinLogoCon">
+                                    <img src="/asset/png/ethereum-logo.png" alt="ethereum-logo">
                                 </div>
+                                <div>
+                                    <p class="coin">LUCK</p>
+                                </div>
+                            </div>
                             <!-- </div> -->
                         </div>
 
@@ -270,6 +273,35 @@
 
             </div>
 
+            <div style="margin-top: 40px;">
+                <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators ca-indic">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active rounded-circle" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            class="rounded-circle" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            class="rounded-circle" aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                            class="rounded-circle" aria-label="Slide 4"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./asset/png/banner 1.png" class="d-block w-100" alt="banner-1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./asset/png/banner 2.png" class="d-block w-100" alt="banner-2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./asset/png/banner 3.png" class="d-block w-100" alt="banner-3">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./asset/png/banner 4.png" class="d-block w-100" alt="banner-4">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </section>
 
         <section class="withdraw-modal-con" id="withdraw-modal-con">
@@ -290,7 +322,7 @@
 
     </main>
 
-    
+
     <script src="script.js"></script>
 
     <script>
@@ -305,6 +337,11 @@
         }
 
     </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
